Not allowing creation date to wrap to eliminate bug
Fixes https://github.com/openshift/origin-web-catalog/issues/412

--- a/app/styles/_projects.less
+++ b/app/styles/_projects.less
@@ -19,6 +19,13 @@
   }
 }
 
+.project-date, // from origin-web-catalog
+.projects-list {
+  [am-time-ago] {
+    white-space: nowrap;
+  }
+}
+
 .project-description.list-group-item-text {
   width: 100%;
   .highlighted-content,
